--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.0",
     "@reduxjs/toolkit": "^1.6.2",
     "@sucrase/webpack-loader": "^2.0.0",
     "@types/express": "^4.17.13",
@@ -41,6 +42,7 @@
     "reflect-metadata": "^0.1.13",
     "serve-favicon": "^2.5.0",
     "stream": "^0.0.2",
+    "styled-components": "^5.3.3",
     "sucrase": "^3.20.3",
     "timers": "^0.1.1",
     "universal-cookie-express": "^4.0.3",
@@ -54,6 +56,8 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/react-redux": "^7.1.20",
+    "@types/styled-components": "^5.1.17",
+    "babel-plugin-styled-components": "^2.0.2",
     "eslint": "^7.24.0",
     "eslint-config-next": "latest",
     "husky": "^7.0.4",
