--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/express": "^4.17.13",
     "@types/serve-favicon": "^2.5.3",
     "axios": "^0.24.0",
+    "classnames": "^2.3.1",
+    "clsx": "^1.1.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
@@ -38,12 +40,14 @@
     "ramda": "^0.27.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.34.2",
     "redux": "^4.1.2",
     "reflect-metadata": "^0.1.13",
     "serve-favicon": "^2.5.0",
     "stream": "^0.0.2",
     "styled-components": "^5.3.3",
     "sucrase": "^3.20.3",
+    "swr": "^1.1.1",
     "timers": "^0.1.1",
     "universal-cookie-express": "^4.0.3",
     "use-local-slice": "^1.2.1"
