--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.2",
+    "rebass": "^4.0.7",
     "redux": "^4.1.2",
     "reflect-metadata": "^0.1.13",
     "serve-favicon": "^2.5.0",
@@ -57,6 +58,7 @@
     "@types/lodash": "^4.14.177",
     "@types/morgan": "^1.9.3",
     "@types/node": "^12.12.21",
+    "@types/ramda": "^0.27.60",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/react-redux": "^7.1.20",
