--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.2",
+    "react-use": "^17.3.1",
     "rebass": "^4.0.7",
     "redux": "^4.1.2",
     "reflect-metadata": "^0.1.13",
