--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,6 @@
         "module": "esnext",
         "moduleResolution": "node",
         "resolveJsonModule": true,
-        "isolatedModules": true,
         "jsx": "preserve",
         "baseUrl": ".",
         "paths": {
@@ -19,10 +18,10 @@
             "~/app/*": ["app/*"],
             "~/backend": ["backend"],
             "~/backend/*": ["backend/*"],
+            "~/common": ["common"],
+            "~/common/*": ["common/*"],
             "~/database": ["database"],
             "~/database/*": ["database/*"],
-            "~/global": ["global"],
-            "~/global/*": ["global/*"],
             "~/ioc": ["ioc"],
             "~/ioc/*": ["ioc/*"],
             "~/frontend": ["frontend"],
