--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "private": true,
     "scripts": {
-        "_dev": "next",
+        "dev": "next",
         "__dev": "node .",
-        "dev": "tsnd --respawn .",
+        "___dev": "tsnd --respawn .",
         "____dev": "ts-node .",
         "_____dev": "nodemon ts-node .",
         "build": "next build",
@@ -78,6 +78,8 @@
         "typescript": "^4.5.2"
     },
     "browser": {
-        "crypto": false
+        "crypto": false,
+        "http": false,
+        "https": false
     }
 }
