--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,8 +34,8 @@
             "~/fonts/*": ["public/assets/media/fonts*"],
             "~/src": ["src"],
             "~/src/*": ["src/*"],
-            "~/state": ["state"],
-            "~/state/*": ["state/*"],
+            "~/global": ["global"],
+            "~/global/*": ["global/*"],
             "~/types": ["types"],
             "~/types/*": ["types/*"],
             "~/view": ["view"],
