--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "morgan": "^1.10.0",
         "mysql": "^2.18.1",
         "next": "^12.0.7",
+        "next-redux-wrapper": "^7.0.5",
         "next-routes": "^1.4.2",
         "next-translate": "^1.2.0",
         "os": "^0.1.2",
@@ -47,6 +48,7 @@
         "react-use": "^17.3.1",
         "rebass": "^4.0.7",
         "redux": "^4.1.2",
+        "redux-persist": "^6.0.0",
         "reflect-metadata": "^0.1.13",
         "serve-favicon": "^2.5.0",
         "styled-components": "^5.3.3",
@@ -65,6 +67,7 @@
         "@types/react": "^17.0.2",
         "@types/react-dom": "^17.0.1",
         "@types/react-redux": "^7.1.20",
+        "@types/redux-persist": "^4.3.1",
         "@types/serve-favicon": "^2.5.3",
         "@types/styled-components": "^5.1.17",
         "babel-plugin-styled-components": "^2.0.2",
